--- a/poc/frontend/package.json
+++ b/poc/frontend/package.json
@@ -9,14 +9,22 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "clsx": "^2.1.1",
         "ethers": "^6.13.5",
+        "lucide-react": "^0.563.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^7.13.0",
+        "recharts": "^3.7.0",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.23",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.4.1"
     }
 }
